# Utility-Bot

./: .gitignore  .replit  LICENSE  README.md  antinuke_config.json  blacklist.json  bot.py  cases_data.json  check_file  constants.py  data.layout_config.json  eval_tools.py  main.py  moderation_data.json  pyproject.toml  quarantine_data.json  replit.md  replit.nix  requirements.txt  restart_info.json  testing.py  verification.db  verification_data.json
commands/: applications_tickets.py  automod.py  bot_owner.py  meme.py  misc.py  mod.py  proposal.py  roles.py
commands/bot_owner/: _base.py  _group_cog.py  bot_owner.py  misc.py
commands/bot_owner/cogs/: load.py  pull_reload.py  reload.py  unload.py
commands/bot_owner/state/: restart.py  shutdown.py
commands/fun/: meme.py
commands/moderation/: cases.py  health.py  lockdown.py  moderation.py  notes.py  quarantine.py
commands/moderation/cases/: _base.py  _group_cog.py  add_note.py  classify.py  configure.py  delete_entry.py  edit_entry.py  query.py  view.py
commands/moderation/primary/: __init__.py  _base.py  _group_cog.py  ban.py  bans.py  kick.py  kicks.py  note.py  notes.py  purge.py  purges.py  quarantine.py  quarantines.py  timeout.py  timeouts.py  unban.py  unbans.py  unquarantine.py  untimeout.py  untimeouts.py
commands/moderation/secondary/: __init__.py  health.py  lockdown.py  quarantine.py
commands/owner/: bot_owner.py
commands/systems/: antinuke.py  applications.py  applications_tickets.py  help.py  leave.py  proposal.py  tickets.py  verification.py
commands/systems/leave/: __init__.py  _base.py  _group_cog.py  add.py  leave.py  remove.py
commands/utility/: help.py  misc.py  nomination.py  partnerships.py  ping.py  proposal.py  roles.py  thread.py  user.py  utility.py
core/: bot.py  cases.py  cog_loader.py  help.py  partnership_state.py  permissions.py  ready.py  responses.py  startup.py  state.py  ticket_state.py  utils.py
core/state/: __init__.py  application_state.py  automod_state.py  blacklist_state.py  layout_state.py  partnership_state.py  ticket_state.py
data/: layout_message_ids.json
data/configs/: application_state.json  cases_config.json
data/runtime/: cases_data.json
events/: applications.py  errors.py  on_leave.py  on_message.py  tickets.py
events/logging/: audit_logger.py  commands.py  errors.py  logging.py  messages.py
events/logging/audit/: __init__.py  _base.py
events/logging/audit/channels/: channel_create.py  channel_delete.py  channel_edit.py
events/logging/audit/emojis/: emoji_create.py  emoji_delete.py  emoji_edit.py
events/logging/audit/invites/: invite_create.py  invite_delete.py
events/logging/audit/members/: member_ban.py  member_edit.py  member_join.py  member_remove.py  member_unban.py
events/logging/audit/roles/: role_create.py  role_delete.py  role_edit.py
events/logging/audit/server/: integrations.py  server_edit.py
events/logging/audit/stickers/: sticker_create.py  sticker_delete.py  sticker_edit.py
events/logging/audit/threads/: thread_create.py  thread_delete.py  thread_edit.py
events/member/: on_join.py  on_leave.py  verification.py
events/messages/: on_delete.py  on_edit.py  on_send.py
events/systems/: antinuke.py  applications.py  automod.py  leave.py  tickets.py  verification.py
guild_info/: hierarchy.py  partnership_requirements.py  partnerships.py  rules.py  staff_proposal_info.py  staff_proposals.py
guild_info/guidelines/: administrator_guidelines.py  director_guidelines.py  moderator_guidelines.py  moderator_guildelines.py  staff_guidelines.py
